# ATLAS

./: config.yaml  pyproject.toml  requirements.txt
atlas/: __init__.py  main.py
atlas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
atlas/brain/: llm.py  system_prompt.txt
atlas/config/: settings.py
atlas/core/: application.py  event_loop.py  events.py  logger.py  test.py
atlas/core/.playwright-mcp/: page-2026-05-31T16-21-42-655Z.yml  page-2026-05-31T16-23-06-185Z.yml  page-2026-05-31T16-25-58-269Z.yml
atlas/mcp/: client.py  pc_control.py  playwright.py
atlas/tools/: executor.py  registry.py  tool_call.py
atlas/voice/: speech.py
scratch/: list_tools.py
scripts/: tts_stress_test.py
servers/pc-control/: README.md  pyproject.toml
servers/pc-control/pc_control/: __init__.py  __main__.py  registry.py  server.py
servers/pc-control/pc_control.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
servers/pc-control/pc_control/modules/: __init__.py  applications.py  keyboard.py  mouse.py  screen.py  system.py  windows.py
tests/: test_event_loop.py  test_events.py  test_settings.py
